--- a/src/ApcAccessMetrics.Common/ApcAccessMetrics.Common.csproj
+++ b/src/ApcAccessMetrics.Common/ApcAccessMetrics.Common.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Json.NET" Version="1.0.22" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
 </Project>
