--- a/src/ApcAccessMetrics.AspNetCore/ApcAccessMetrics.AspNetCore.csproj
+++ b/src/ApcAccessMetrics.AspNetCore/ApcAccessMetrics.AspNetCore.csproj
@@ -4,6 +4,11 @@
     <ProjectReference Include="..\ApcAccessMetrics.Common\ApcAccessMetrics.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="prometheus-net" Version="3.5.0" />
+    <PackageReference Include="prometheus-net.AspNetCore" Version="3.5.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
